--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
